<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bodega" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="409dp" >

        <TextView
            android:id="@+id/lblDatosPesonales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/lblDatosPersonales"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/darkred"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lblDatosPesonales"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/v_nombre"
            android:inputType="textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete"
            android:textColor="@color/black"
            android:textColorHint="@color/darkblue"
            android:textSize="15sp" >

            <requestFocus />

        </EditText>

        <EditText
            android:id="@+id/edtApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edtNombre"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/v_apellido"
            android:inputType="textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete"
            android:textColor="@color/black"
            android:textColorHint="@color/darkblue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edtApellido"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/v_correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/darkblue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtCelular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edtCorreo"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/v_numero_telefono"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/darkblue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/lblDatosUsuarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblDatosPesonales"
            android:layout_below="@+id/edtCelular"
            android:layout_marginTop="10dp"
            android:text="@string/lblDatosUsuarios"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/darkred"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lblDatosUsuarios"
            android:layout_marginTop="5dp"
            android:hint="@string/v_usuario"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/darkblue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edtUsuario"
            android:layout_marginTop="5dp"
            android:hint="@string/v_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/blue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtPasswordConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edtPassword"
            android:layout_marginTop="5dp"
            android:hint="@string/v_confi_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/blue"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnRegistrar"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@color/darkred"
            android:drawableLeft="@drawable/task"
            android:text="Registrar" />

    </RelativeLayout>

</ScrollView>